increased z-index on nav bar to fix scrolling issue with headers

--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ nav {
     justify-content: flex-end;
     position: fixed;
     top: 0;
+    z-index: 2;
     background: #F5E9E5;
     font-family: 'Spartan', sans-serif;
     font-weight: 600;
-    font-size: 0.8em;
-
+    font-size: 0.9em;
 }
 
 nav a {
